<resources>
    <string name="app_name">Cook4Me</string>

    <!--  DatePicker  -->
    <string name="selected_date_text">Selected Date: </string>
    <string name="select_date_button">Select Date</string>

    <!--  TimePicker  -->
    <string name="selected_time_text">Selected Time: </string>
    <string name="select_time_button">Select Time</string>

    <!--  CreateEventScreen  -->
    <string name="ask_event_name">Name of the event</string>
    <string name="ask_event_description">Description of the event</string>
    <string name="ask_event_number_participants">Number of people</string>
    <string name="select_event">Select an event</string>
    <string name="explore_event">Explore event</string>

    <!--  CreateChallengeScreen  -->
    <string name="ask_challenge_name">Name of the challenge?</string>
...

    <!-- CreateNewItemButton -->
    <string name="create_new_item_type">Create a new</string>
    <string name="event">Event</string>

    <!-- DetailedEventScreen -->
    <string name="event_name">Event name:</string>
    <string name="event_description">Event description:</string>
    <string name="event_max_participants">Max Participants:</string>
    <string name="event_creator">Creator:</string>
    <string name="event_time">Event time:</string>
    <string name="detailed_event_create_chat">Chat with event owner</string>

    <!-- CreateTupperwareScreen -->
    <string name="TupCreateFormTupName">Tupperware Name</string>
    <string name="TupCreateFormDesc">Description</string>
    <string name="ButtonRowCancel">Cancel</string>
    <string name="ButtonRowDone">Done</string>
    <string name="tupperware_field_description_error">Description cannot be blank</string>
    <string name="tupperware_field_name_error">Name cannot be blank</string>
    <string name="tupperware_field_image_error">Tupperware needs an image</string>


    <!-- SwipeScreen -->
    <string name="swipe_alldone_placeholder">all done</string>

    <!-- AddressInput   -->
    <string name="address_default_question">What is the location?</string>
    <string name="street_address_label">Street address</string>
    <string name="city_label">City</string>
    <string name="zip_code_label">Zip code</string>

    <!-- Login Screen -->
    <string name="sign_in_screen_sign_in_button">Sign in</string>
    <string name="sign_in_screen_register_button">Register</string>
    <string name="invalid_email_message">Invalid email!</string>
    <string name="password_blank">Password cannot be blank!</string>
    <string name="sign_in_screen_non_exist_user">User does not seem to exist!</string>
    <string name="sign_in_screen_wrong_password">Wrong password!</string>
    <string name="TAG_EMAIL_FIELD">EmailField</string>
    <string name="TAG_PASSWORD_FIELD">PasswordField</string>

    <!--  Profile -->
    <string name="tag_allergies">Allergies</string>
    <string name="tag_favoriteDish">Favorite dish</string>
    <string name="tag_bio">Bio</string>
    <string name="invalid_username_message">This username is not valid</string>
    <string name="tag_defaultProfileImage">defaultProfileImage</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tag_password">Password</string>
    <string name="tag_password_repeat">Repeat Password</string>
    <string name="tag_email">Email</string>

    <!-- Recipe Screen -->
    <string name="ingredientsTextFieldContentDesc">Ingredients Text field</string>
...
    <string name="get_top_recipes">Top recipes</string>
    <string name="get_recent_recipes">Most recent recipes</string>
    <string name="empty_recipe_feed">no recipe yet</string>

    <!-- tests -->
    <string name="label">label</string>
    <string name="question">question</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>

    <!-- Signup -->
    <string name="btn_continue">continue</string>
    <string name="sign_up_screen_top_bar_message">Enter Email and Password</string>
...
    <string name="back">Back</string>
    <string name="winner">Winner</string>
    <string name="inform_offline_status">You are offline</string>
    <string name="to_swipe_go_online">You are offline, to keep swiping you need to go online</string>

    <!-- Loading Screen -->
    <string name="Loading_Screen_Tag">Loading Screen test tag</string>
    <string name="Loading_Screen_Text">Wait a sec!</string>

    <!-- Placeholder Screen -->
    <string name="placeholder_screen_content_description">placeholder screen</string>

    <!-- Match Dialogue -->
...
