...
            text = "Number of people to invite", min = 2, max = 16,
            onValueChange = { event.value.maxParticipants = it },
            modifier = Modifier.fillMaxWidth()
        )
        ToggleButtonChoice(
            question = "Who can see the event",
            possibilities = Pair("Everyone", "Subscriber only"),
            onToggle = {
                event.value.isPrivate = it == "Subscriber only"
            }
        )
        DatePickerComponent(
            initialDate = Calendar.getInstance(),
...
